[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ec2_tag_query"
authors = [
  { name="Wayne Jenkins", email="wjenkins1@companieshouse.gov.uk" },
]
description = "Lookup details on EC2 instances by tag name and value"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'botocore == 1.27.86',
  'boto3 == 1.24.86',
]
version = "MakefilePlaceholder"

[project.scripts]
ec2-tag-query="ec2_tag_query:main"
